fix: capas visibles, mapa base arreglado

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+/* Forzar que no sea colapsable */
+.ol-attribution {
+  display: none !important;
+}
